# sv

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.markdown  attribution.md  cabal.project  changelog.md  default.nix  separated-values.cabal  separated-values.nix  sv.cabal  sv.nix
.circleci/: config.yml
.github/workflows/: haskell-ci.yml
benchmarks/: README.md  bench.hs  changelog.md  sv-benchmarks.cabal
benchmarks/Data/Sv/: Random.hs
benchmarks/bench/: bench.hs
benchmarks/csv/: 10.csv  1000.csv  10000.csv  500.csv
benchmarks/csv/easy/: 1.csv  10.csv  100.csv  1000.csv  10000.csv  500.csv  5000.csv
benchmarks/csv/hard/: 1.csv  100.csv  5000.csv
benchmarks/src/Data/Sv/: Random.hs
benchmarks/src/Data/Sv/Alien/: Hedgehog.hs
ci/: ci.nix  jobsets.json  jobsets.nix
examples/: ChangeLog.md  LICENCE  sv-examples.cabal
examples/csv/: concat.csv  encoding-header.expected.csv  encoding.expected.csv  numbers.csv  ragged.csv  requote.csv  requote.golden.csv  tt-handicap.csv
examples/src/Data/Sv/Example/: Columnar.hs  Concat.hs  Encoding.hs  EncodingWithHeader.hs  Numbers.hs  Ragged.hs  Requote.hs  Species.lhs  TableTennis.hs
examples/test/: test.hs
src/Data/: ByteString1.hs  NonEmptyString.hs  Sv.hs  Trifoldable.hs  Trifunctor.hs  Triversable.hs
src/Data/CSV/: CSV.hs  Field.hs  Parser.hs  Pretty.hs  Quote.hs  Record.hs
src/Data/Csv/: Csv.hs  Decode.hs  Decoder.hs  Field.hs  Headed.hs  Parser.hs  Pretty.hs  Record.hs
src/Data/Csv/Decode/: ByteString.hs  Error.hs  Field.hs  Row.hs  State.hs  Type.hs
src/Data/Csv/Parser/: Internal.hs
src/Data/Csv/Pretty/: Config.hs  Internal.hs
src/Data/Csv/Record/: Final.hs  NonEmpty.hs  Simple.hs
src/Data/Functor/Compose/: Extra.hs
src/Data/List/: AtLeastTwo.hs
src/Data/List/NonEmpty/: Extra.hs
src/Data/Semigroup/Foldable/: Extra.hs
src/Data/Separated/: Extra.hs
src/Data/String/: Babel.hs
src/Data/Sv/: Config.hs  Cursor.hs  Decode.hs  Encode.hs  Field.hs  Parse.hs  Parser.hs  Pretty.hs  Print.hs  Record.hs  Structure.hs  Sv.hs
src/Data/Sv/Alien/: Cassava.hs  Containers.hs
src/Data/Sv/Cursor/: Headedness.hs  Newline.hs  Options.hs  Separator.hs
src/Data/Sv/Decode/: Error.hs  Field.hs  Row.hs  State.hs  Type.hs
src/Data/Sv/Encode/: Options.hs  Type.hs
src/Data/Sv/Lens/: Util.hs
src/Data/Sv/Parse/: Internal.hs  Options.hs
src/Data/Sv/Parser/: Internal.hs  Options.hs
src/Data/Sv/Pretty/: Config.hs  Internal.hs
src/Data/Sv/Print/: Internal.hs  Options.hs
src/Data/Sv/Syntax/: Field.hs  Record.hs  Sv.hs
src/Data/Vector/: NonEmpty.hs
src/Text/: Babel.hs  Between.hs  Escape.hs  Escaped.hs  Newline.hs  Quote.hs  Space.hs
sv/: README.markdown  changelog.md  default.nix  sv.cabal  sv.nix
sv-cassava/: ChangeLog.md  changelog.md  sv-cassava.cabal
sv-cassava/src/Data/Sv/: Cassava.hs
sv-cassava/tests/: tests.hs
sv-common/: LICENCE  changelog.md  sv-common.cabal
sv-common/src/Data/Sv/Structure/: Headedness.hs
sv-common/src/Data/Sv/Text/: Quote.hs  Separator.hs
sv-common/src/Data/Sv/Vector/: NonEmpty.hs
sv-core/: changelog.md  sv-core.cabal
sv-core/src/Data/Sv/Cursor/: Core.hs  Headedness.hs  Separator.hs
sv-core/src/Data/Sv/Decode/: Core.hs  Error.hs  Type.hs
sv-core/src/Data/Sv/Encode/: Core.hs  Options.hs  Type.hs
sv-core/src/Data/Sv/Structure/: Core.hs  Headedness.hs  Newline.hs  Separator.hs
sv-core/test/: tasty.hs
sv-core/test/Data/Sv/: Laws.hs
sv-core/test/Data/Sv/Core/: Laws.hs
sv-svfactor/: changelog.md  sv-svfactor.cabal
sv-svfactor/src/Data/Sv/: Svfactor.hs
sv-syntax/: LICENCE  sv-syntax.cabal
sv-syntax/src/Data/Sv/: Parse.hs  Print.hs  Syntax.hs
sv-syntax/src/Data/Sv/Parse/: Internal.hs  Options.hs
sv-syntax/src/Data/Sv/Print/: Internal.hs  Options.hs
sv-syntax/src/Data/Sv/Syntax/: Field.hs  Record.hs  Sv.hs
sv-syntax/src/Data/Sv/Text/: Escape.hs  Newline.hs  Space.hs
sv-syntax/src/Text/: Newline.hs
sv-syntax/test/: tasty.hs
sv-syntax/test/Data/Sv/: Generators.hs  ParseTest.hs  PrintTest.hs  RoundTripsParsePrint.hs
sv/bench/: bench.hs
sv/src/Data/: Sv.hs
sv/src/Data/Sv/: Decode.hs  Encode.hs  Parse.hs  Structure.hs
sv/test/Data/Sv/: CassavaTest.hs  DecodeTest.hs  EncodeTest.hs  RoundTripsDecodeEncode.hs
svfactor/: cabal.project  svfactor.cabal
svfactor/examples/: LICENCE  changelog.md  svfactor-examples.cabal
svfactor/examples/src/Data/Svfactor/Example/: Concat.hs  Requote.hs
svfactor/examples/test/: test.hs
svfactor/src/Data/: Svfactor.hs
svfactor/src/Data/Svfactor/: Parse.hs  Print.hs  Syntax.hs
svfactor/src/Data/Svfactor/Parse/: Internal.hs  Options.hs
svfactor/src/Data/Svfactor/Print/: Internal.hs  Options.hs
svfactor/src/Data/Svfactor/Structure/: Headedness.hs
svfactor/src/Data/Svfactor/Syntax/: Field.hs  Record.hs  Sv.hs
svfactor/src/Data/Svfactor/Text/: Escape.hs  Newline.hs  Quote.hs  Separator.hs  Space.hs
svfactor/src/Data/Svfactor/Vector/: NonEmpty.hs
svfactor/test/: tasty.hs
svfactor/test/Data/Svfactor/: Generators.hs  ParseTest.hs  PrintTest.hs  RoundTripsParsePrint.hs
test/: Species.hs  Tasty.hs  concat.csv  concat.hs  hedgehog.hs  ragged.hs  requote.csv  requote.hs  species.csv  species.hs  species.lhs  tasty.hs  tt.hs
test/Data/CSV/: Arbitraries.hs  Generators.hs  ParserTest.hs  PrettyTest.hs
test/Data/Csv/: DecodeTest.hs  Generators.hs  ParserTest.hs  PrettyTest.hs
test/Data/Sv/: CassavaTest.hs  DecodeTest.hs  EncodeTest.hs  Generators.hs  Laws.hs  ParseTest.hs  ParserTest.hs  PrettyTest.hs  PrintTest.hs  RoundTrips.hs  RoundTripsDecodeEncode.hs
weigh/: ChangeLog.md  LICENCE  sv-weigh.cabal
weigh/src/: Main.hs
