name:                separated-values
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              George Wilson
maintainer:          george@wils.online
copyright:           Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            CSV
synopsis:            Values which are separated, often by commas
description:         Library for parsing and decoding values which are separated, often by commas
homepage:            https://github.com/data61/separated-values
bug-reports:         https://github.com/data61/separated-values/issues
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository    head
  type:              git
  location:          git@github.com/data61/separated-values.git

library
  exposed-modules:     Data.CSV.Parser
                       , Data.CSV.Field
                       , Data.CSV.Record
                       , Data.CSV.Quote
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
                       , charset >=0.3 && <=0.4
                       , parsers >=0.12 && <0.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
                       -Wall

test-suite             tasty
  type:
                       exitcode-stdio-1.0
  main-is:
                       Tasty.hs
  default-language:
                       Haskell2010
  build-depends:
                       base >=4.8 && <5
                       , parsec >= 3.1 && < 3.2
                       , parsers
                       , separated-values
                       , tasty >= 0.11 && < 0.12
                       , tasty-discover >= 3 && < 3.1
                       , tasty-hunit >= 0.9 && < 0.10
                       , tasty-quickcheck >= 0.8 && < 0.9
  ghc-options:
                       -Wall
                       -threaded
  hs-source-dirs:
                       test

