name:                sv
version:             0.1.0.0
license:             BSD3
license-file:        LICENCE
author:              George Wilson
maintainer:          george@wils.online
copyright:           Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            CSV
synopsis:            Values which are separated, often by commas
description:         Library for parsing and decoding values which are separated, often by commas
homepage:            https://github.com/qfpl/sv
bug-reports:         https://github.com/qfpl/sv/issues
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1

source-repository    head
  type:              git
  location:          git@github.com/qfpl/sv.git

library
  exposed-modules:     Data.ByteString1
                       , Data.Csv.Csv
                       , Data.Csv.Decode
                       , Data.Csv.Decode.ByteString
                       , Data.Csv.Decode.Error
                       , Data.Csv.Field
                       , Data.Csv.Headed
                       , Data.Csv.Parser
                       , Data.Csv.Parser.Internal
                       , Data.Csv.Pretty
                       , Data.Csv.Pretty.Config
                       , Data.Csv.Pretty.Internal
                       , Data.Csv.Record
                       , Data.Csv.Record.Final
                       , Data.Csv.Record.NonEmpty
                       , Data.Csv.Record.Simple
                       , Data.Functor.Compose.Extra
                       , Data.List.AtLeastTwo
                       , Data.List.NonEmpty.Extra
                       , Data.Semigroup.Foldable.Extra
                       , Text.Babel
                       , Text.Between
                       , Text.Escaped
                       , Text.Newline
                       , Text.Quote
                       , Text.Space
  -- other-modules:
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
                       , bifunctors >= 5.1 && < 6
                       , bytestring >= 0.9.1.10 && < 0.11
                       , charset >=0.3 && <=0.4
                       , containers >= 0.4.0 && < 0.6
                       , lens >= 4 && < 5
                       , mtl >= 2.0.1 && < 2.3
                       , parsers >=0.12 && <0.13
                       , profunctors >= 5.2.1 && < 6
                       , semigroupoids >= 5 && <6
                       , semigroups >= 0.18 && < 0.19
                       , separated >= 0.3 && < 0.4
                       , text >= 1.0 && < 1.3
                       , text1 >= 0.0.1 && < 0.1
                       , transformers >= 0.2 && < 0.6
                       , trifecta >= 1.7 && < 1.8
                       , validation >= 0.6.2 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
                       -Wall

test-suite             tasty
  type:
                       exitcode-stdio-1.0
  main-is:
                       tasty.hs
  other-modules:
                       Data.Csv.DecodeTest
                       , Data.Csv.PrettyTest
                       , Data.Csv.ParserTest
                       , Data.Csv.Generators
  default-language:
                       Haskell2010
  build-depends:
                       base >=4.8 && <5
                       , bytestring >= 0.9.1.10 && < 0.11
                       , hedgehog >= 0.5 && < 0.6
                       , lens >= 4 && < 5
                       , parsec >= 3.1 && < 3.2
                       , parsers >=0.12 && <0.13
                       , QuickCheck >= 2.9 && <2.11
                       , semigroupoids >= 5 && <6
                       , semigroups >= 0.18 && < 0.19
                       , separated >= 0.3 && < 0.4
                       , sv
                       , tasty >= 0.11 && < 0.12
                       , tasty-hedgehog >= 0.1 && < 0.2
                       , tasty-hunit >= 0.9 && < 0.10
                       , tasty-quickcheck >= 0.8 && < 0.9
                       , text >= 1.0 && < 1.3
                       , text1 >= 0.0.1 && < 0.1
                       , trifecta >= 1.7 && < 1.8
                       , validation >= 0.6.2 && < 1


  ghc-options:
                       -Wall
                       -threaded
  hs-source-dirs:
                       test
